# ai-client

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md
specs/: migration-0.4.md  migration-0.5.md  migration-0.6.md  stack.md  todo.md
specs/openai/: f5-operation-coverage.json  source.json  verify-source.sh
src/: error.rs  lib.rs  stream.rs  utils.rs
src/core/: http.rs  json_array.rs  mod.rs  sse.rs  test_support.rs
src/gemini/: api_types.rs  client.rs  generate_content.rs  mod.rs  model.rs
src/openai/: client.rs  mod.rs  model.rs
src/openai/conversations/: conversation_tests.rs  message.rs  mod.rs  options.rs  requests.rs  resource.rs  resources.rs  types.rs
src/openai/responses/: capability.rs  create_request.rs  dynamic.rs  events.rs  input.rs  mod.rs  model_config.rs  models.rs  output.rs  request.rs  resource.rs  tagged.rs  tool_io.rs  tools.rs
src/openai/types/: create_chat_completion.rs  create_response.rs  list_models.rs  mod.rs
src/openai_compatible/: client.rs  dialect.rs  mod.rs
src/openai_compatible/chat/: capability.rs  events.rs  mod.rs  request.rs  response.rs
tests/: LIVE_PROVIDERS.md  compile.rs  live_gemini.rs  live_openai.rs  live_openai_compatible.rs  live_openai_legacy.rs
tests/live_openai/: options.rs
tests/ui/: fail_dynamic_missing_input.rs  fail_dynamic_missing_input.stderr  fail_endpoint_reasoning_on_gpt4o.rs  fail_endpoint_reasoning_on_gpt4o.stderr  fail_endpoint_unsupported_image_tool.rs  fail_endpoint_unsupported_image_tool.stderr  fail_endpoint_unsupported_structured_output.rs  fail_endpoint_unsupported_structured_output.stderr  fail_gemini_marker.rs  fail_gemini_marker.stderr  fail_gpt51_image_tool.rs  fail_gpt51_image_tool.stderr  fail_gpt51_reasoning_after_temperature.rs  fail_gpt51_reasoning_after_temperature.stderr  fail_gpt51_temperature_after_reasoning.rs  fail_gpt51_temperature_after_reasoning.stderr  fail_gpt54_reasoning_after_temperature.rs  fail_gpt54_reasoning_after_temperature.stderr  fail_gpt54_temperature_after_reasoning.rs  fail_gpt54_temperature_after_reasoning.stderr  fail_gpt54pro_structured_output.rs  fail_gpt54pro_structured_output.stderr  fail_gpt55_in_memory_retention.rs  fail_gpt55_in_memory_retention.stderr  fail_missing_input.rs  fail_missing_input.stderr  fail_model_config_temperature_after_reasoning.rs  fail_model_config_temperature_after_reasoning.stderr  fail_model_config_unsupported_retention.rs  fail_model_config_unsupported_retention.stderr  fail_private_wire_stream.rs  fail_private_wire_stream.stderr  fail_reasoning_on_gpt4o.rs  fail_reasoning_on_gpt4o.stderr  fail_stream_options_on_builder.rs  fail_stream_options_on_builder.stderr  fail_temperature_on_gpt5.rs  fail_temperature_on_gpt5.stderr  fail_unsupported_cache_retention.rs  fail_unsupported_cache_retention.stderr  (+9 more)
tests/ui/compatible/: fail_cross_dialect_request.rs  fail_cross_dialect_request.stderr  fail_dynamic_missing_messages.rs  fail_dynamic_missing_messages.stderr  fail_missing_messages.rs  (+23 more)
(+35 files in other folders)
