[package]
authors = ["Steve Pryde <steve@stevepryde.com>"]
description = "A simple client for various AI LLMs"
edition = "2021"
homepage = "https://github.com/stevepryde/ai-client"
license = "MIT OR Apache-2.0"
name = "ai_client"
repository = "https://github.com/stevepryde/ai-client"
version = "0.5.1"

keywords = ["ai", "llm", "gemini", "client"]
readme = "README.md"

[features]
default = ["rustls-tls"]
chat-completions = []
live-tests = []
openai-compatible = []
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
stream = ["dep:futures", "reqwest/stream"]

[dependencies]
base64 = "0.22"
bon = "3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
trybuild = "1"
